# test_cv

./: .gitignore  CMakeLists.txt
src/: hogDetection.py  sizeof.cpp  test_cv.cpp
